[GPU] Fix GPU plugin integration tests (#143425)
Refactor the GPUPlugin code to abstract GPUSupport functionality through an interface, update tests to use a mock implementation when needed.

Fixes #141561
Fixes #142070
Fixes #142071
Fixes #142072